--- a/views/recipes/home.hbs
+++ b/views/recipes/home.hbs
@@ -3,13 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <title>App</title>
-   <script src="http://localhost:3000/dist/recipe-webcomponents.js"></script>
   </head>
   <body>
     <h1> Test </h1>
     {{#each recipes}}
-    <recipe-card recipe={{this}}></recipe-card>
-    {{this.name}}
+    <recipe-card>{{name}}</recipe-card>
     {{/each}}
+
+    <script type="module" src="/dist/recipe-webcomponents/recipe-webcomponents.esm.js"></script>
+<script nomodule="" src="/dist/recipe-webcomponents/recipe-webcomponents.js"></script>
   </body>
 </html>
