webComponents now working

--- a/views/recipes/home.hbs
+++ b/views/recipes/home.hbs
@@ -3,11 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <title>App</title>
+    <link rel="stylesheet" href="https://raw.githubusercontent.com/Semantic-Org/Semantic-UI-CSS/master/semantic.min.css">
   </head>
   <body>
     <h1> Test </h1>
     {{#each recipes}}
-    <recipe-card>{{name}}</recipe-card>
+    <recipe-card recipe-name="{{name}}">{{name}}</recipe-card>
     {{/each}}
 
     <script type="module" src="/dist/recipe-webcomponents/recipe-webcomponents.esm.js"></script>
