using partials in hbs

--- a/views/recipes/home.hbs
+++ b/views/recipes/home.hbs
@@ -1,11 +1,4 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <title>App</title>
-    <link rel="stylesheet" href="https://raw.githubusercontent.com/Semantic-Org/Semantic-UI-CSS/master/semantic.min.css">
-  </head>
-  <body>
+{{> head}}
     <h1> Test </h1>
     {{#each recipes}}
     <recipe-card recipe-name="{{name}}">{{name}}</recipe-card>
