semantic ui integration

--- a/views/partials/head.hbs
+++ b/views/partials/head.hbs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>App</title>
-    <link rel="stylesheet" href="https://raw.githubusercontent.com/Semantic-Org/Semantic-UI-CSS/master/semantic.min.css">
+    <link rel="stylesheet" href="/semantic-ui/semantic.min.css">
   </head>
 <body>
     
