--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,2 +1,15 @@
+<script
+  src="https://code.jquery.com/jquery-3.1.1.min.js"
+  integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+  crossorigin="anonymous"></script>
+<script language='javascript'>
+             $(document).ready(function(){
+                $('.ui.accordion').accordion();
+             });
+</script>
+<script src="/semantic-ui/semantic.min.js"></script>
+<script type="module" src="/webcomponents/dist/recipe-webcomponents/recipe-webcomponents.esm.js"></script>
+<script nomodule="" src="/webcomponents/dist/recipe-webcomponents/recipe-webcomponents.js"></script>
+
 </body>
 </html>
