--- a/views/recipes/home.hbs
+++ b/views/recipes/home.hbs
@@ -1,10 +1,15 @@
 {{> head}}
-    <h1> Test </h1>
-    {{#each recipes}}
-    <recipe-card recipe-name="{{name}}">{{name}}</recipe-card>
-    {{/each}}
-
-    <script type="module" src="/dist/recipe-webcomponents/recipe-webcomponents.esm.js"></script>
-<script nomodule="" src="/dist/recipe-webcomponents/recipe-webcomponents.js"></script>
-  </body>
-</html>
+<div class="ui container">
+<div class="ui accordion">
+  {{#each recipes}}
+  <div class="title">
+    <i class="dropdown icon"></i>
+    {{name}}
+  </div>
+  <div class="content">
+    <p>{{description}}</p>
+  </div>
+  {{/each}}
+</div>
+</div>
+{{> footer}}
